# Vic2ToHoI4

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  CODEOWNERS  Copy_Files.bat  README.md  Vic2ToHoI4-Installer.iss  Vic2ToHoI4.sln  Vic2ToHoI4.sln.DotSettings  Vic2ToHoI4.vcxproj  Vic2ToHoI4.vcxproj.filters  Vic2ToHoI4Tests.vcxproj  Vic2ToHoI4Tests.vcxproj.filters  Vic2ToHoI4lib.vcxproj  Vic2ToHoI4lib.vcxproj.filters  appveyor.yml  build_Vic2ToHoI4_release.sh  run_linux_tests.sh
Vic2ToHoI4/: CMakeLists.txt  Copy_Files.bat  Copy_Files.sh  Copy_Files_debug.bat  Vic2ToHoI4.vcxproj  Vic2ToHoI4.vcxproj.filters  culture_aborigine.dds  culture_afar.dds  culture_africano.dds  culture_afro_american.dds  culture_afro_antillean.dds  culture_aimara.dds  culture_ainu.dds  culture_alan.dds  culture_albanian.dds  culture_amerikaner.dds  culture_anglo_african.dds  culture_aromanian.dds  culture_ashkenazi.dds  culture_australian.dds  culture_australienne.dds  culture_azande.dds  culture_baluchi.dds  culture_beifaren.dds  culture_boer.dds  culture_bosniak.dds  culture_british.dds  culture_burmese.dds  culture_chechen.dds  culture_cherokee.dds  culture_crni.dds  culture_czarny.dds  culture_delian.dds  culture_duck_culture.dds  culture_dutch.dds  culture_eastern_algonquian.dds  culture_elephant_culture.dds  culture_falklander.dds  culture_filipino.dds  culture_frankish.dds  (+80 more)
Vic2ToHoI4/Data_Files/: FlagsToIdeasMappings.txt  HPM_province_mappings.txt  Historical Project Mod 0.4.6_province_mappings.txt  Historical Project Mod_province_mappings.txt  IntelligenceAgencyLogos.txt  OperativeNamesMappings.txt  ReadMe.txt  SupportedConvertersDefault.xml  The Concert of Europe_province_mappings.txt  Vic2Localisations.csv  Vic2toHoI4DefaultConfiguration.xml  ai_peaces.txt  configuration-example.txt  configuration.txt  converterFocuses.txt  converterIdeas.txt  converterIdeologies.txt  country_mappings.txt  cultureGroupToGraphics.txt  foreignInfluenceDecisions.txt  governmentMapping.txt  ideologicalDecisions.txt  ideologicalIdeas.txt  languageReplacements.txt  license.txt  merge_nations.txt  names.txt  province_mappings.txt  shipTypes.txt  tech_mapping.txt  unit_mappings.txt  version.txt
Vic2ToHoI4/Data_Files/CodenamesOperatives/: RME_operative_codenames.txt
Vic2ToHoI4/Data_Files/Configurables/: CountryNamesMappings.txt  CultureToVoiceMappings.txt  HoI4CountryLeaders.txt  converterFocuses.txt  names.txt  unit_mappings.txt
Vic2ToHoI4/Data_Files/Fronter/: fronter-configuration.txt  fronter-options.txt  options_l_english.yml  options_l_french.yml  options_l_german.yml  options_l_italian.yml  options_l_latin.yml  options_l_russian.yml
Vic2ToHoI4/Data_Files/Localisations/: ArticleRules.txt  StateCategories.txt
Vic2ToHoI4/Data_Files/Map/: regions.txt
Vic2ToHoI4/Data_Files/Sounds/: CultureToVoiceMappings.txt
Vic2ToHoI4/Data_Files/configurables/: ArticleRules.txt  CountryGrammar.txt  CountryNamesMappings.txt  CultureToVoiceMappings.txt  FlagsToIdeasMappings.txt  GovernmentMappings.txt  Greater Flavor Mod_province_mappings.txt  Historical Flavour Mod v1.27I_province_mappings.txt  Historical Project Mod 0.4.6_province_mappings.txt  HoI4CountryLeaders.txt  IdeologyMappings.txt  ImportCharacters.txt  StateCategories.txt  The Concert of Europe_province_mappings.txt  Vic2Localisations.csv  ai_peaces.txt  casus_bellis_mappings.txt  converterFocuses.txt  converterIdeas.txt  converterIdeologies.txt  country_mappings.txt  cultureGroupToGraphics - Copy.txt  cultureGroupToGraphics.txt  factions_mappings.txt  foreignInfluenceDecisions.txt  governmentMapping.txt  ideologicalAdvisors.txt  ideologicalDecisions.txt  ideologicalIdeas.txt  languageReplacements.txt  languageReplacementsBis.txt  merge_nations.txt  names.txt  partyMapping.txt  province_mappings.txt  regions.txt  research_bonus_mappings.txt  shipTypes.txt  tech_mapping.txt  tech_mappings.txt  (+1 more)
Vic2ToHoI4/Data_Files/flags/: ABU.tga  ABU_communist.tga  ABU_fascist.tga  ABU_republic.tga  ADU_communist.tga  ADU_fascist.tga  ADU_monarchy.tga  ADU_republic.tga  AFG.tga  AFG_fascist.tga  ALD.tga  ALD_fascist.tga  ANG_communist.tga  ARA_fascist.tga  ARA_monarchy.tga  ARG_fascist.tga  AST.tga  AST_communist.tga  AST_republic.tga  BAV_communist.tga  BAV_monarchy.tga  BAV_republic.tga  BEL_communist.tga  BHM_fascist.tga  BHU_communist.tga  BKF_communist.tga  BLZ_communist.tga  BLZ_fascist.tga  BLZ_monarchy.tga  BNG_communist.tga  BNG_fascist.tga  BOL_communist.tga  BOL_fascist.tga  BOS.tga  BOS_fascist.tga  BRD_communist.tga  BRD_fascist.tga  BRD_republic.tga  BRZ_republic.tga  BUG_communist.tga  (+410 more)
Vic2ToHoI4/Source/: Color.cpp  Color.h  Configuration.cpp  Configuration.h  Flags.cpp  Flags.h  V2toHOI4Converter.cpp  Vic2ToHoI4Converter.h  Vic2toHOI4Converter.cpp  main.cpp
Vic2ToHoI4/Source/HOI4World/: AIPeace.cpp  AIPeaces.cpp  Advisor.h  AllMilitaryMappings.cpp  AllMilitaryMappings.h  CoastalProvinces.cpp  DivisionTemplate.cpp  Event.cpp  Events.cpp  Events.h  HOI4Ideology.cpp  HOI4Ideology.h  HOI4Version.cpp  HOI4Version.h  HoI4Agreement.cpp  HoI4Army.cpp  HoI4Army.h  HoI4Buildings.cpp  HoI4Buildings.h  HoI4Country.cpp  HoI4Country.h  HoI4Faction.h  HoI4Focus.cpp  HoI4Focus.h  HoI4FocusTree.cpp  HoI4FocusTree.h  HoI4Leader.cpp  HoI4Leader.h  HoI4Localisation.cpp  HoI4Localisation.h  HoI4Navy.cpp  HoI4Navy.h  HoI4Province.cpp  HoI4Relations.cpp  HoI4Relations.h  HoI4State.cpp  HoI4States.cpp  HoI4States.h  HoI4StrategicRegion.cpp  HoI4StrategicRegion.h  (+39 more)
Vic2ToHoI4/Source/Hoi4Outputter/: DifficultySettings.cpp  DifficultySettings.h  Hoi4CountryOutputter.cpp  Hoi4CountryOutputter.h  outDifficultySettings.cpp  outDifficultySettings.h
Vic2ToHoI4/Source/Mappers/: CountryMapping.cpp  CountryMapping.h  GovernmentMapper.cpp  GovernmentMapper.h  GovernmentMapperBuilder.h  GraphicsMappedBuilder.h  GraphicsMapper.cpp  GraphicsMapper.h  MergeRules.cpp  MergeRules.h  ProvinceDefinitions.cpp  ProvinceDefinitions.h  TechMapper.cpp  TechMapper.h  V2Localisations.cpp  V2Localisations.h
Vic2ToHoI4/Source/Maps/: MapData.cpp  MapData.h  (+4 more)
(+6251 files in other folders)
